// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect.basic render renders TreeNode correctly 1`] = `
<span
  aria-autocomplete="list"
  aria-controls="RC_TREE_SELECT_07088089578811041_1_list"
  aria-haspopup="true"
  class="rc-tree-select rc-tree-select-enabled"
  role="combobox"
  tabindex="0"
>
  <span
    class="rc-tree-select-selection rc-tree-select-selection--single"
  >
    <span
      class="rc-tree-select-selection__rendered"
    >
      <span
        class="rc-tree-select-selection__placeholder"
      />
    </span>
    <span
      class="rc-tree-select-arrow"
      style="outline:none"
    >
      <b />
    </span>
  </span>
</span>
`;

exports[`TreeSelect.basic render renders TreeNode correctly with falsy child 1`] = `
<span
  aria-autocomplete="list"
  aria-controls="RC_TREE_SELECT_040308595111437984_1_list"
  aria-haspopup="true"
  class="rc-tree-select rc-tree-select-enabled"
  role="combobox"
  tabindex="0"
>
  <span
    class="rc-tree-select-selection rc-tree-select-selection--single"
  >
    <span
      class="rc-tree-select-selection__rendered"
    >
      <span
        class="rc-tree-select-selection__placeholder"
      />
    </span>
    <span
      class="rc-tree-select-arrow"
      style="outline:none"
    >
      <b />
    </span>
  </span>
</span>
`;

exports[`TreeSelect.basic render renders correctly 1`] = `
<span
  aria-autocomplete="list"
  aria-controls="RC_TREE_SELECT_040904314297099886_1_list"
  aria-haspopup="true"
  class="forTest awesome awesome-enabled"
  role="combobox"
  style="width:300px"
  tabindex="0"
>
  <span
    class="awesome-selection awesome-selection--multiple"
  >
    <ul
      class="awesome-selection__rendered"
    >
      <li
        class="awesome-search awesome-search--inline"
      >
        <span
          class="awesome-search__field__wrap"
        >
          <input
            class="awesome-search__field"
            value=""
          />
          <span
            class="awesome-search__field__mirror"
          >
             
          </span>
        </span>
      </li>
    </ul>
  </span>
</span>
`;

exports[`TreeSelect.basic render renders disabled correctly 1`] = `
<span
  aria-autocomplete="list"
  aria-controls="RC_TREE_SELECT_09803413425316203_1_list"
  aria-haspopup="true"
  class="rc-tree-select rc-tree-select-disabled"
  role="combobox"
  tabindex="0"
>
  <span
    class="rc-tree-select-selection rc-tree-select-selection--single"
  >
    <span
      class="rc-tree-select-selection__rendered"
    >
      <span
        class="rc-tree-select-selection__placeholder"
      />
    </span>
    <span
      class="rc-tree-select-arrow"
      style="outline:none"
    >
      <b />
    </span>
  </span>
</span>
`;

exports[`TreeSelect.basic render renders tree correctly 1`] = `
<span
  aria-autocomplete="list"
  aria-controls="RC_TREE_SELECT_05023583122634554_1_list"
  aria-haspopup="true"
  class="rc-tree-select rc-tree-select-enabled"
  role="combobox"
  tabindex="0"
>
  <span
    class="rc-tree-select-selection rc-tree-select-selection--multiple"
  >
    <ul
      class="rc-tree-select-selection__rendered"
    >
      <li
        class="rc-tree-select-search rc-tree-select-search--inline"
      >
        <span
          class="rc-tree-select-search__field__wrap"
        >
          <input
            class="rc-tree-select-search__field"
            value=""
          />
          <span
            class="rc-tree-select-search__field__mirror"
          >
             
          </span>
        </span>
      </li>
    </ul>
  </span>
</span>
`;

exports[`TreeSelect.basic render renders treeDataSimpleMode correctly 1`] = `
<span
  aria-autocomplete="list"
  aria-controls="RC_TREE_SELECT_03632925363736088_1_list"
  aria-haspopup="true"
  class="rc-tree-select rc-tree-select-enabled"
  role="combobox"
  tabindex="0"
>
  <span
    class="rc-tree-select-selection rc-tree-select-selection--single"
  >
    <span
      class="rc-tree-select-selection__rendered"
    >
      <span
        class="rc-tree-select-selection__placeholder"
      />
    </span>
    <span
      class="rc-tree-select-arrow"
      style="outline:none"
    >
      <b />
    </span>
  </span>
</span>
`;

exports[`TreeSelect.basic search nodes renders search input 1`] = `
Array [
  <span
    aria-autocomplete="list"
    aria-controls="RC_TREE_SELECT_rc-tree-select_1_list"
    aria-expanded="true"
    aria-haspopup="true"
    class="rc-tree-select rc-tree-select-open rc-tree-select-focused rc-tree-select-enabled"
    role="combobox"
    tabindex="0"
  >
    <span
      class="rc-tree-select-selection rc-tree-select-selection--single"
    >
      <span
        class="rc-tree-select-selection__rendered"
      >
        <span
          class="rc-tree-select-selection__placeholder"
        />
      </span>
      <span
        class="rc-tree-select-arrow"
        style="outline:none"
      >
        <b />
      </span>
    </span>
  </span>,
  <div>
    <div
      class="rc-tree-select-dropdown rc-tree-select-dropdown--single rc-tree-select-dropdown-placement-bottomLeft "
      style="visibility:hidden"
    >
      <div>
        <span
          class="rc-tree-select-dropdown-search"
        >
          <span
            class="rc-tree-select-search__field__wrap"
          >
            <input
              class="rc-tree-select-search__field"
              value=""
            />
            <span
              class="rc-tree-select-search__field__mirror"
            >
               
            </span>
          </span>
        </span>
        <ul
          class="rc-tree-select-tree"
          role="tree-node"
          unselectable="on"
        >
          <li
            class="rc-tree-select-tree-treenode-switcher-close"
          >
            <span
              class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
            />
            <span
              class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
              title="labela"
            >
              <span
                class="rc-tree-select-tree-title"
              >
                labela
              </span>
            </span>
          </li>
          <li
            class="rc-tree-select-tree-treenode-switcher-close"
          >
            <span
              class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
            />
            <span
              class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
              title="labelb"
            >
              <span
                class="rc-tree-select-tree-title"
              >
                labelb
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;
